# DeltaE

./: CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
src/: de2000.rs  lib.rs
